{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 70,
  "lineage": "f1a1bfba-aaa8-1e7a-0c6c-8c3471448d91",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleController",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:042625219890:instance/i-0a673ca8ac3996779",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a673ca8ac3996779",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e063aeb58840728",
            "private_dns": "ip-172-20-10-130.us-east-2.compute.internal",
            "private_ip": "172.20.10.130",
            "public_ip": "3.133.13.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08adfd49c599911df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b30e736e7a968364",
            "tags": {
              "Name": "Ansible-ControlNode"
            },
            "tags_all": {
              "Name": "Ansible-ControlNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f790a353b1ae06aa"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleMN-DockerHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:042625219890:instance/i-07267c7f3b7aac7fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07267c7f3b7aac7fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d21a8e54ea9e482",
            "private_dns": "ip-172-20-10-154.us-east-2.compute.internal",
            "private_ip": "172.20.10.154",
            "public_ip": "18.119.99.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a5b5c70112fc643d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b30e736e7a968364",
            "tags": {
              "Name": "AnsibleMN-DockerHost"
            },
            "tags_all": {
              "Name": "AnsibleMN-DockerHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f790a353b1ae06aa"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleManagedNode1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:042625219890:instance/i-003bac975390984b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003bac975390984b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07f0910a709c6b1ba",
            "private_dns": "ip-172-20-10-66.us-east-2.compute.internal",
            "private_ip": "172.20.10.66",
            "public_ip": "3.143.67.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fcab9745cbf85153",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b30e736e7a968364",
            "tags": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tags_all": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f790a353b1ae06aa"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:042625219890:instance/i-031fa41d69230156a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031fa41d69230156a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01d003bb2a451664b",
            "private_dns": "ip-172-20-10-126.us-east-2.compute.internal",
            "private_ip": "172.20.10.126",
            "public_ip": "3.19.79.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c86ce14b0df5de46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b30e736e7a968364",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f790a353b1ae06aa"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:042625219890:instance/i-01714504439166f0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01714504439166f0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09073715926ba1996",
            "private_dns": "ip-172-20-10-26.us-east-2.compute.internal",
            "private_ip": "172.20.10.26",
            "public_ip": "52.14.10.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac34351aed51bfb6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b30e736e7a968364",
            "tags": {
              "Name": "Nexus-Server"
            },
            "tags_all": {
              "Name": "Nexus-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f790a353b1ae06aa"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyLab-IntGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042625219890:internet-gateway/igw-0d00a4c653212e50b",
            "id": "igw-0d00a4c653212e50b",
            "owner_id": "042625219890",
            "tags": {
              "Name": "MyLab-InternetGW"
            },
            "tags_all": {
              "Name": "MyLab-InternetGW"
            },
            "vpc_id": "vpc-0afb741c697d0feed"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyLab_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042625219890:route-table/rtb-0f0322499641e34c1",
            "id": "rtb-0f0322499641e34c1",
            "owner_id": "042625219890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d00a4c653212e50b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyLab_Routetable"
            },
            "tags_all": {
              "Name": "MyLab_Routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb741c697d0feed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyLab_Assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076db74bce0761c11",
            "route_table_id": "rtb-0f0322499641e34c1",
            "subnet_id": "subnet-0b30e736e7a968364"
          },
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_route_table.MyLab_RouteTable",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyLab_Sec_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042625219890:security-group/sg-0f790a353b1ae06aa",
            "description": "To allow inbound and outbound traffic to mylab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f790a353b1ae06aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "MyLab Security Group",
            "name_prefix": "",
            "owner_id": "042625219890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0afb741c697d0feed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyLab-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042625219890:subnet/subnet-0b30e736e7a968364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-0b30e736e7a968364",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "042625219890",
            "tags": {
              "Name": "MyLab-Subnet1"
            },
            "tags_all": {
              "Name": "MyLab-Subnet1"
            },
            "vpc_id": "vpc-0afb741c697d0feed"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyLab-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:042625219890:vpc/vpc-0afb741c697d0feed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-00a235ca8d6814f23",
            "default_route_table_id": "rtb-04b8486b6d3597210",
            "default_security_group_id": "sg-0b1f90bd7199a7a16",
            "dhcp_options_id": "dopt-06e202d1f660d7abe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0afb741c697d0feed",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04b8486b6d3597210",
            "owner_id": "042625219890",
            "tags": {
              "Name": "MyLab-VPC"
            },
            "tags_all": {
              "Name": "MyLab-VPC"
            }
          }
        }
      ]
    }
  ]
}